# 42_python_data_science_piscine

./: .gitignore  README.md
Python - 0 - Starting/ex00/: Hello.py
Python - 0 - Starting/ex01/: format_ft_time.py
Python - 0 - Starting/ex02/: find_ft_type.py  tester.py
Python - 0 - Starting/ex03/: NULL_not_found.py
Python - 0 - Starting/ex04/: whatis.py
Python - 0 - Starting/ex05/: building.py
Python - 0 - Starting/ex06/: filterstring.py  ft_filter.py  tester.py
Python - 0 - Starting/ex07/: sos.py
Python - 0 - Starting/ex08/: Loading.py
Python - 0 - Starting/ex09/ft_package/: LICENSE  README.md  pyproject.toml  tester.py
Python - 1 - Array/ex00/: give_bmi.py
Python - 1 - Array/ex01/: array2D.py
Python - 1 - Array/ex03/: load_image.py  zoom.py
Python - 1 - Array/ex04/: rotate.py
Python - 1 - Array/ex05/: pimp_image.py  tester.py
Python - 2 - DataTable/ex00/: load_csv.py
Python - 2 - DataTable/ex01/: aff_life.py
Python - 2 - DataTable/ex02/: aff_pop.py
Python - 2 - DataTable/ex03/: projection_life.py
