[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [{name = "gabrifer", email = "gabrifer@student.42madrid.com"}]
description = "Python for Data Science"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}